--- a/Tst/BlueDotBrigade.Analyzers.UnitTests/BlueDotBrigade.Analyzers.UnitTests.csproj
+++ b/Tst/BlueDotBrigade.Analyzers.UnitTests/BlueDotBrigade.Analyzers.UnitTests.csproj
@@ -1,11 +1,25 @@
-<Project Sdk="MSTest.Sdk/3.6.4">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <UseVSTest>true</UseVSTest>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\BlueDotBrigade.Analyzers\BlueDotBrigade.Analyzers.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Roslyn analyzer testing + MSTest -->
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzer.Testing" Version="1.1.1" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.MSTest" Version="1.1.1" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
+		<PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
+
+		<!-- Test data helper -->
+		<PackageReference Include="BlueDotBrigade.DatenLokator" Version="2.2.0" />
+	</ItemGroup>
 
 </Project>
