--- a/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
+++ b/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
@@ -20,16 +20,13 @@
 
 	<ItemGroup>
 		<!-- Roslyn bits (dev-only for the analyzer) -->
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<!-- Place analyzer assembly in the correct nupkg folder -->
-		<None Include="$(OutputPath)\$(AssemblyName).dll"
-			  Pack="true"
-			  PackagePath="analyzers/dotnet/cs"
-			  Visible="false" />
+		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
 
 </Project>
