--- a/Tst/BlueDotBrigade.Analyzers.UnitTests/BlueDotBrigade.Analyzers.UnitTests.csproj
+++ b/Tst/BlueDotBrigade.Analyzers.UnitTests/BlueDotBrigade.Analyzers.UnitTests.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzer.Testing" Version="1.1.2" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.MSTest" Version="1.1.2" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
 		<PackageReference Include="MSTest.TestFramework" Version="4.0.1" />
 		<PackageReference Include="MSTest.TestAdapter" Version="4.0.1" />
 
