--- a/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
+++ b/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
@@ -25,6 +25,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="bin\Debug\net9.0\BlueDotBrigade.Analyzers.dll" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<!-- Place analyzer assembly in the correct nupkg folder -->
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
