Fix : At compile-time, Roslyn prevents analyzers from performing file I/O (RS1035). For example:  `Directory.GetCurrentDirectory()`

--- a/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
+++ b/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
@@ -16,6 +16,9 @@
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<DevelopmentDependency>true</DevelopmentDependency>
+
+		<!-- Analyzer projects should enforce extended analyzer rules -->
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
 
 	<ItemGroup>
