--- a/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
+++ b/Src/BlueDotBrigade.Analyzers/BlueDotBrigade.Analyzers.csproj
@@ -22,6 +22,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="bin\**" />
+	  <EmbeddedResource Remove="bin\**" />
+	  <None Remove="bin\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<!-- Roslyn bits (dev-only for the analyzer) -->
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
@@ -39,6 +45,14 @@
 		<AdditionalFiles Include="$(SolutionDir)$(AnalyzerDslFileName)" Condition="Exists('$(SolutionDir)$(AnalyzerDslFileName)')" />
 		<!-- Include project-level DSL if present; project-level supersedes solution-level at analysis time. -->
 		<AdditionalFiles Include="$(MSBuildProjectDirectory)\$(AnalyzerDslFileName)" Condition="Exists('$(MSBuildProjectDirectory)\$(AnalyzerDslFileName)')" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="C:\Code\BlueDotBrigade\OpenSource\analyzers\Src\BlueDotBrigade.Analyzers\bin\Debug\net10.0\BlueDotBrigade.Analyzers.dll" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="C:\Code\BlueDotBrigade\OpenSource\analyzers\Src\BlueDotBrigade.Analyzers\bin\Debug\net10.0\BlueDotBrigade.Analyzers.dll" />
 	</ItemGroup>
 
 	<ItemGroup>
